[gd_scene load_steps=2 format=3 uid="uid://cl11le41kcpc"]

[ext_resource type="Script" uid="uid://bb5dq4itecdcw" path="res://Components/matches_sidebar.gd" id="1_d0qq0"]

[node name="Matches" type="VBoxContainer" groups=["Browser"]]
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 148.0
grow_vertical = 2
script = ExtResource("1_d0qq0")

[node name="counter" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Docs: 0
Tags: 0"
horizontal_alignment = 3

[node name="max_page" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Pages: 0"
horizontal_alignment = 3

[node name="paging" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Home" type="Button" parent="paging"]
layout_mode = 2
text = "<<"

[node name="Last" type="Button" parent="paging"]
layout_mode = 2
text = "<"

[node name="curr_page" type="LineEdit" parent="paging"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
alignment = 1
virtual_keyboard_type = 2
select_all_on_focus = true

[node name="Next" type="Button" parent="paging"]
layout_mode = 2
text = ">"

[node name="End" type="Button" parent="paging"]
layout_mode = 2
text = ">>"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="Tag_List" type="HFlowContainer" parent="ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="paging/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="paging/Last" to="." method="_on_last_pressed"]
[connection signal="text_changed" from="paging/curr_page" to="." method="_on_curr_page_text_changed"]
[connection signal="text_submitted" from="paging/curr_page" to="." method="_on_curr_page_text_submitted"]
[connection signal="pressed" from="paging/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="paging/End" to="." method="_on_end_pressed"]
